Correct overflow in mobile version

--- a/src/styles/user.scss
+++ b/src/styles/user.scss
@@ -30,6 +30,8 @@ width: 100%;
 
 @media only screen and (max-width: 768px) {
 	.screen-wrapper {
+		max-width: 100%;
+		overflow-x: hidden;
 		& .screen-title {
 			padding-top: 10vh;
 		}
